--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@
 }
 
 .icon {
-  height: 20px;
-  width: 20px;
+  max-height: 20px;
+  max-width: 20px;
   object-fit: scale-down;
   margin-right: 8px;
 }
